--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,13 +5,21 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
-      with:
-        java-version: '8'
-        distribution: 'adopt'
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Shadow archive
-      run: ./gradlew shadowJar
+      - uses: actions/checkout@v2
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          distribution: 'adopt'
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Shadow archive
+        run: ./gradlew shadowJar
+      - name: Deploy new data to all remote server
+        uses: garygrossgarten/github-action-scp@release
+        with:
+          local: ${{ github.workspace }}/build/libs/proxy.jar
+          remote: ${{ secrets.CLOUD_OUTPUT_DIRECTORY }}/proxy.jar
+          host: ${{ secrets.DEDICATED_1_HOST_ADDRESS }}
+          username: ${{ secrets.DEDICATED_USER }}
+          privateKey: ${{ secrets.DEDICATED_SSH_KEY }}
