--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,6 +4,10 @@ jobs:
   proxy:
     runs-on: self-hosted
 
+    env:
+      MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+      MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 8
@@ -13,13 +17,24 @@ jobs:
           distribution: 'adopt'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Shadow archive
+      - name: Clean project
+        run: ./gradlew clean
+      - name: Build project
         run: ./gradlew shadowJar
-      - name: Deploy new data to all remote server
-        uses: garygrossgarten/github-action-scp@release
+      - name: Deploy project to remote servers
+        uses: hyrendev/scp-action@0.1-ALPHA
         with:
-          local: ${{ github.workspace }}/build/libs/proxy.jar
-          remote: ${{ secrets.CLOUD_OUTPUT_DIRECTORY }}/proxy.jar
-          host: ${{ secrets.DEDICATED_1_HOST_ADDRESS }}
-          username: ${{ secrets.DEDICATED_USER }}
-          privateKey: ${{ secrets.DEDICATED_SSH_KEY }}
+          files: |
+            [
+              "build/libs/proxy.jar"
+            ]
+          remote: /home/cloud/output/
+          servers: |
+            [
+              {
+                "host": "${{ secrets.DEDICATED_1_HOST_ADDRESS }}",
+                "port": "${{ secrets.DEDICATED_PORT }}",
+                "user": "${{ secrets.DEDICATED_USER }}",
+                "private_key": "${{ secrets.DEDICATED_SSH_KEY }}"
+              }
+            ]
