--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,7 +2,7 @@ on: [ 'push' ]
 
 jobs:
   proxy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     env:
       MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
