--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,6 @@
-on: [ 'push' ]
+on:
+  push:
+    branches: [ 'main' ]
 
 jobs:
   proxy:
@@ -17,8 +19,6 @@ jobs:
           distribution: 'adopt'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Clean project
-        run: ./gradlew clean
       - name: Build project
         run: ./gradlew shadowJar
       - name: Deploy project to remote servers
