--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build project
-        run: ./gradlew shadowJar
+        run: ./gradlew jar
       - name: Deploy project to remote servers
         uses: hyrendev/scp-action@0.1-ALPHA
         with:
