--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,37 +4,14 @@ on:
 
 jobs:
   proxy:
-    runs-on: ubuntu-latest
-
-    env:
-      MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-      MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 16
-        uses: actions/setup-java@v2
-        with:
-          java-version: '16'
-          distribution: 'adopt'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build project
         run: ./gradlew jar
-      - name: Deploy project to remote servers
-        uses: hyrendev/scp-action@0.1-ALPHA
-        with:
-          files: |
-            [
-              "build/libs/proxy.jar"
-            ]
-          remote: /home/cloud/output/
-          servers: |
-            [
-              {
-                "host": "${{ secrets.DEDICATED_1_HOST_ADDRESS }}",
-                "port": "${{ secrets.DEDICATED_PORT }}",
-                "user": "${{ secrets.DEDICATED_USER }}",
-                "private_key": "${{ secrets.DEDICATED_SSH_KEY }}"
-              }
-            ]
+      - name: Deploy to remote servers
+        run: |
+          sh /home/cloud/scripts/github/deploy.sh build/libs/proxy.jar
